data/derived/fa15/progs/unify/prog2112.ml.out
Characters 83-87:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type int -> int * int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type bool 
